--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "start": "node api/screenshot.js"
   },
   "dependencies": {
-    "@sparticuz/chromium-min": "^123.0.1",
-    "puppeteer-core": "^22.6.0"
+    "@sparticuz/chromium-min": "131.0.1",
+    "puppeteer-core": "24.0.0"
   },
   "engines": {
     "node": "20.x"
