--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "@sparticuz/chromium-min": "141.0.0",
+    "@vercel/blob": "^2.2.0",
     "puppeteer-core": "24.23.1"
   },
   "engines": {
